--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Don Sin">
 <meta name="author" content="Peter Loewen">
 <meta name="author" content="Mohsen Sadatsafavi">
-<meta name="dcterms.date" content="2024-12-18">
+<meta name="dcterms.date" content="2024-12-19">
 
 <title>Who is healthy anyways? Varying definitions of health in reference populations and the contribution of measurable social determinants to racial gaps in lung function</title>
 <style>
@@ -179,7 +179,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">December 18, 2024</p>
+      <p class="date">December 19, 2024</p>
     </div>
   </div>
   
@@ -867,11 +867,12 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <h2 class="anchored" data-anchor-id="discussion">Discussion</h2>
 <p>Our results show that a higher than previously reported proportion of racial differences in lung function between Black and White Americans can be explained by differences in SDoH <span class="citation" data-cites="harik-khan2001 harik-khan2004">[<a href="#ref-harik-khan2001" role="doc-biblioref">11</a>, <a href="#ref-harik-khan2004" role="doc-biblioref">12</a>]</span>. Within studied SDoH variables in NHANES 2007-2012, we were able to explain 26% of the racial gap in lung function in adults, and as much as 35% of the gap in males under 20 years of age. The true contribution of SDoH to racial gaps in lung function is likely much higher, as only some aspects of SDoH are properly captured in NHANES. The difficulty of measuring SDoH and our incomplete and evolving understanding of the complex interplay between racism, social, and environmental factors suggest that what we see might just be the tip of the iceberg.</p>
 <p>Our results are consistent with a growing body of literature that implicates historical and structural inequities in perpetuating health disparities among racialized communities <span class="citation" data-cites="nardone2020 schuyler2022 gaffney2021 levy2018">[<a href="#ref-nardone2020" role="doc-biblioref">14</a>–<a href="#ref-levy2018" role="doc-biblioref">17</a>]</span>. However, we also observed a higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV1 explained by the studied exposures). This might be related to US-specific systemic factors such as the enduring impact of slavery, segregation, redlining, and other inequities and injustices that profoundly affect lung health. Supporting this notion, some studies have reported significantly higher levels of allostatic load and hypertension in US-born self-identified Black individuals compared to Black immigrants to the US <span class="citation" data-cites="doamekpor2015 brown2017">[<a href="#ref-doamekpor2015" role="doc-biblioref">18</a>, <a href="#ref-brown2017" role="doc-biblioref">19</a>]</span>.</p>
+<p>For Asian people,</p>
 <p>Introducing nine additional exclusion criteria to reference populations significantly minimized racial disparities in lung function in our study. Our exploratory analysis revealed that occupational exposures, obesity, and non-home ownership were the three exclusion criteria most responsible for explaining the racial gap in lung function.</p>
 <p>What are the implications for lung function reference equations? Since these equations are designed to predict healthy lung function, they need to make an assumption about the nature of racial gaps in lung function, either explicitly or implicitly. For decades, ATS lung function testing guidelines have acknowledged the effects of social and environmental factors on the variability of lung function across populations <span class="citation" data-cites="lungfun1991">[<a href="#ref-lungfun1991" role="doc-biblioref">8</a>]</span>. However, race-specific lung function reference equations implicitly assumed racial gaps in lung function were normal and benign, the same way that differences based on biological sex at birth, height, and age, were considered normal. This practice was at odds with the recognized role of SDoH, reinforced inequities not just by perpetuating the notion of race as a biological determinant, but also by failing to account for the fact that at least some of the observed racial gap may be pathological, due to injury caused by SDoH. In 2023, the ATS statement on race and ethnicity in pulmonary function testing advocated for a significant shift in practice. The statement acknowledged the importance and complexity of these exposures, rejected fixed differences between races, and embraced a more uncertain race-averaged reference equation, instead of the misleading statistical accuracy of the previous race-based equations <span class="citation" data-cites="bhakta2023">[<a href="#ref-bhakta2023" role="doc-biblioref">20</a>]</span>.</p>
 <p>The newly recommended race-averaged GLI-Global reference equations no longer assume that racial differences in lung function are normal and benign differences. However, do they assume these differences are solely due to disproportionate environmental exposures and SDoH? The answer seems to be no, as GLI-Global equations use averages of race-specific reference lung function projections, as opposed to projecting the highest race-specific value for all <span class="citation" data-cites="bowerman2023">[<a href="#ref-bowerman2023" role="doc-biblioref">7</a>]</span>.</p>
 <p>Developing unbiased, fair, and practical lung function reference equations is challenging because of our limited understanding of complex exposures, lack of good representative data, and diverse applications of pulmonary function tests. Recognizing the good faith efforts of those working diligently to find a balance between feasibility, practicality, and an ideal accounting for all potential biases, one potential way forward, at least for some use cases of spirometry, involves explicitly accounting for effect of complex exposures. This does not require asking patients for their exposure history or social determinants at the point of care and can be achieved by tightening the inclusion criteria in the reference populations. Excluding individuals with unfavourable SDoH from reference populations results in a more uniformly healthy reference population across racial identities and makes the dataset less biased. However, this approach may reduce the racial representativeness of the data due to disproportionate exposures. Ensuring a sufficiently large and representative initial sample may allow oversampling to achieve representativeness across all groups.</p>
-<p>Proposals for developing lung function standards using data from participants of “middle-class origin who live and work in clean environments” have appeared in the literature as early as 1984 <span class="citation" data-cites="Myers1984">[<a href="#ref-Myers1984" role="doc-biblioref">21</a>]</span>. There is precedence for choosing reference populations based on favourable SDoH outside of lung function testing. One prominent example is the WHO Multicentre Growth Reference Study that was conducted to create birth to 2-years growth standards <span class="citation" data-cites="mercedes2004">[<a href="#ref-mercedes2004" role="doc-biblioref">22</a>]</span>. The study’s sites were chosen through a meticulous process that took into account geographical and ethnic representativeness, and included affluent communities in the cities of New Delhi, Muscat, Accra, Oslo, Davis, and Pelotas. The eligibility criteria for individual mother and children included no health, environmental, and economic constraints on growth, mother’s willingness to follow WHO feeding recommendations, among others <span class="citation" data-cites="mercedes2004">[<a href="#ref-mercedes2004" role="doc-biblioref">22</a>]</span>.</p>
+<p>Proposals for developing lung function standards using data from participants of “middle-class origin who live and work in clean environments” have appeared in the literature as early as 1984 <span class="citation" data-cites="Myers1984">[<a href="#ref-Myers1984" role="doc-biblioref">21</a>]</span>. There is also precedence for choosing reference populations based on favourable SDoH outside of lung function testing. One prominent example is the WHO Multicentre Growth Reference Study that was conducted to create birth to 2-years growth standards <span class="citation" data-cites="mercedes2004">[<a href="#ref-mercedes2004" role="doc-biblioref">22</a>]</span>. The study’s sites were chosen through a meticulous process that took into account geographical and ethnic representativeness, and included affluent communities in the cities of New Delhi, Muscat, Accra, Oslo, Davis, and Pelotas. The eligibility criteria for individual mother and children included no health, environmental, and economic constraints on growth, mother’s willingness to follow WHO feeding recommendations, among others <span class="citation" data-cites="mercedes2004">[<a href="#ref-mercedes2004" role="doc-biblioref">22</a>]</span>.</p>
 <p>Our study highlights the necessity for further research to understand the interplay between SDoH, environmental exposures, and lung function across different populations. Future studies should aim to incorporate a wider array of SDoH, such as stress levels, access to healthcare, neighborhood safety, and intergenerational effects, including those related to wealth, social status, poverty, and trauma. There is also a need for longitudinal studies that can elucidate causal pathways and the potential impact of policy changes on reducing health disparities. Exploring the intersectionality of race and other demographic factors could provide a more nuanced understanding of how diverse identities influence lung health outcomes. Expanding research to include international cohorts could enhance the generalizability of findings and support the development of global and localized strategies to address lung health disparities.</p>
 <p>Certain limitations must be acknowledged. Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. Incomplete understanding and limited nature of available data also limits our assessment of complex social and environmental exposures and identities, such as effects of racism, intergenerational wealth effects, life-course exposure to pollutants, gender identity, violence, stress, and allostatic load.</p>
 </section>
@@ -2893,7 +2894,7 @@ youth-NHANES : 2924
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fev1 in adults, the reduction in gap was -0.03
+For fev1 in adults, the baseline gap was 0.5 L
 ```
 
 
@@ -2902,7 +2903,7 @@ For fev1 in adults, the reduction in gap was -0.03
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fvc in adults, the reduction in gap was 0.02
+For fev1 in adults, the absolute change in gap was -0.01 L
 ```
 
 
@@ -2911,7 +2912,7 @@ For fvc in adults, the reduction in gap was 0.02
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fev1 in youth, the reduction in gap was 0.04
+For fev1 in adults, the percentage change in gap was -2.65%
 ```
 
 
@@ -2920,7 +2921,79 @@ For fev1 in youth, the reduction in gap was 0.04
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fvc in youth, the reduction in gap was 0.04
+For fvc in adults, the baseline gap was 0.69 L
+```
+
+
+:::
+
+::: {.cell-output .cell-output-stderr}
+
+```
+For fvc in adults, the absolute change in gap was 0.01 L
+```
+
+
+:::
+
+::: {.cell-output .cell-output-stderr}
+
+```
+For fvc in adults, the percentage change in gap was 2%
+```
+
+
+:::
+
+::: {.cell-output .cell-output-stderr}
+
+```
+For fev1 in youth, the baseline gap was 0.35 L
+```
+
+
+:::
+
+::: {.cell-output .cell-output-stderr}
+
+```
+For fev1 in youth, the absolute change in gap was 0.01 L
+```
+
+
+:::
+
+::: {.cell-output .cell-output-stderr}
+
+```
+For fev1 in youth, the percentage change in gap was 4.18%
+```
+
+
+:::
+
+::: {.cell-output .cell-output-stderr}
+
+```
+For fvc in youth, the baseline gap was 0.42 L
+```
+
+
+:::
+
+::: {.cell-output .cell-output-stderr}
+
+```
+For fvc in youth, the absolute change in gap was 0.02 L
+```
+
+
+:::
+
+::: {.cell-output .cell-output-stderr}
+
+```
+For fvc in youth, the percentage change in gap was 4.35%
 ```
 
 
